Bug #42271
client: ceph-fuse which had been blacklisted couldn't auto reconnect after cluster unblacklisted it.
% Done:
0%
Source:
Community (dev)
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
ceph-fuse
Labels (FS):
Pull request ID:
Crash signature:
Related issues
History
#1 Updated by Patrick Donnelly over 1 year ago
- Status changed from New to Fix Under Review
- Start date deleted (
10/11/2019) - Source set to Community (dev)
#2 Updated by Patrick Donnelly over 1 year ago
- Pull request ID set to 30860
#3 Updated by Patrick Donnelly about 1 year ago
- Assignee set to shen hang
#4 Updated by Patrick Donnelly about 1 year ago
- Target version changed from v15.0.0 to v16.0.0
#5 Updated by Patrick Donnelly 4 months ago
- Status changed from Fix Under Review to Resolved
- Assignee changed from shen hang to Zheng Yan
- Pull request ID changed from 30860 to 31480
#6 Updated by Patrick Donnelly 4 months ago
- Duplicates Feature #20: client: recover from a killed session (w/ blacklist) added