client: auto reconnect after being unblacklised Fixes: https://tracker.ceph.com/issues/42271

Signed-off-by: Shen Hang <harryshen18@gmail.com>